fixing the spacing on mobile h1 and btn

--- a/style.css
+++ b/style.css
@@ -645,11 +645,11 @@ text-align: center;
 
 h1 {
 	font-size: 3em !important;
-	padding:60px 0px 10px !important;
+	padding:40px 0px 10px !important;
 }
 
 .btn {
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .header li {
